update TeamCity CI with PowerShell capability